--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "jsonwebtoken": "^9.0.0",
+    "pdfmake": "^0.2.7",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
